Use VectorViewReader to read IVectorView

--- a/AppInstallerCaller/AppInstallerCaller.csproj
+++ b/AppInstallerCaller/AppInstallerCaller.csproj
@@ -128,12 +128,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Enumerable.cs" />
     <Compile Include="InstallingPackageView.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSwitcher.cs" />
+    <Compile Include="VectorViewReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
